upgrade:: optimze cache export
